--- a/_output.yml
+++ b/_output.yml
@@ -8,6 +8,7 @@ bookdown::gitbook:
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
     download: ["pdf", "epub"]
+  toc_depth: 2
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
